# posTech_TechChallenge1_API_Consulta_Livros

./: README.md  main.py  pyproject.toml  requirements.txt
api/: main.py
api/v1/: router.py
api/v1/endpoints/: books.py  categories.py  health.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  books.py  categories.py  health.py  stats.py
app/core/: config.py  security.py
app/db/: books.db  session.py
app/models/: auth.py  book.py
app/repositories/: auth_repository.py
app/schemas/: auth.py  book.py  stats.py
app/scraper/: book_scraper.py  parser.py
app/services/: auth_service.py  book_service.py  health_service.py
db/: books.db  session.py
models/: book.py
repositories/: book_repository.py
schemas/: book.py
scraper/: book_scraper.py  main.py  parser.py
services/: book_service.py  health_service.py
